--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
+  },
+  "dependencies": {
+    "css-loader": "^0.28.7"
   }
 }
