Added assets package 'images' to dev and prod config.yml

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,6 +1,14 @@
 imports:
     - { resource: config.yml }
 
+
+framework:
+    assets:
+        packages:
+            images:
+                # The base url to use for the 'images' asset package, can be ammended to make use of a cdn
+                # base_urls: 'http://cdn.mycdn.com'
+
 #doctrine:
 #    orm:
 #        metadata_cache_driver: apc
