--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -6,6 +6,11 @@ framework:
         resource: '%kernel.project_dir%/app/config/routing_dev.yml'
         strict_requirements: true
     profiler: { only_exceptions: false }
+    assets:
+        packages:
+            images:
+                # The base url to use for the 'images' asset package, can be ammended to make use of a cdn
+                # base_urls: 'http://cdn.mycdn.com'
 
 web_profiler:
     toolbar: true
