--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -9,11 +9,19 @@ framework:
                 # The base url to use for the 'images' asset package, can be ammended to make use of a cdn
                 # base_urls: 'http://cdn.mycdn.com'
 
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apc
-#        result_cache_driver: apc
-#        query_cache_driver: apc
+#config database parameters
+doctrine:
+    dbal:
+        default_connection: hotstatus_mysql
+        connections:
+            hotstatus_mysql:
+                driver: pdo_mysql
+                host: '%hotstatus_mysql_prod_host%'
+                port: '%hotstatus_mysql_prod_port%'
+                dbname: '%hotstatus_mysql_prod_dbname%'
+                user: '%hotstatus_mysql_prod_user%'
+                password: '%hotstatus_mysql_prod_password%'
+                charset: UTF8MB4
 
 monolog:
     handlers:
