Implemented first action for herodata controller to handle heroes statslist ajax requests. Modified configuration to set base paths for images in the 'images' package. Added name_sort mapping for herodata process to fix the Lucio => Lcio sort name unwanted case

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -11,6 +11,7 @@ framework:
             images:
                 # The base url to use for the 'images' asset package, can be ammended to make use of a cdn
                 # base_urls: 'http://cdn.mycdn.com'
+                base_path: '/images'
 
 #config database parameters
 doctrine:
