Implemented query caching for herodata getDataTableHeroesStatsListAction

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,11 +45,11 @@ twig:
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
         #path: '%database_path%'
-doctrine:
-    orm:
-        auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+#doctrine:
+#    orm:
+#        auto_generate_proxy_classes: '%kernel.debug%'
+#        naming_strategy: doctrine.orm.naming_strategy.underscore
+#        auto_mapping: true
 
 # Swiftmailer Configuration
 swiftmailer:
