Appended base path to all image base paths for use with new cdn base url

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -7,9 +7,7 @@ framework:
     assets:
         packages:
             images:
-                # The base url to use for the 'images' asset package, can be ammended to make use of a cdn
-                # base_urls: 'http://cdn.mycdn.com'
-                base_path: '/images'
+                base_urls: 'http://cdn.hotstat.us/images'
 
 #config database parameters
 #doctrine:
